# enzo-tech-time-keeping

./: .gitignore  Cargo.toml  README.md
css/: timekeeping.css
src/: db.rs  main.rs  timekeeping.rs  utils.rs
src/users/: device_login.rs  mod.rs
systemd/: enzo-tech-time-keeping.service
www/: timekeeping.html
